# invar_spherenet

./: LICENCE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
invarsphere/: __init__.py
invarsphere/data/: convert.py  dataset.py  keys.py  loader.py  utils.py
invarsphere/model/: __init__.py  base.py  invarsphere.py
invarsphere/nn/: activation.py  base.py  basis.py  cutoff.py  direct_2d.py  direct_3d.py  direct_basis.py  efficient.py  scaling.py  transform.py
invarsphere/nn/scaling/: compat.py  scale_factor.py
invarsphere/utils/: calc.py  json.py  math.py  repeat_tensor.py  resolve.py
scripts/: fit_scalefactor.py
tests/data/: test_utils.py
tests/model/: test_invarsphere.py
tests/nn/: test_basis.py
tests/utils/: test_repeat_tensor.py
